NetBSD Problem Report #39900

From martin@duskware.de  Wed Nov 12 06:46:36 2008
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 124C163BA81
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 12 Nov 2008 06:46:36 +0000 (UTC)
Message-Id: <20081112064631.EF83A33A9C@mail.duskware.de>
Date: Wed, 12 Nov 2008 07:46:26 +0100 (CET)
From: martin
Reply-To: martin
To: gnats-bugs@gnats.NetBSD.org
Subject: can't assign 0.0.0.0 inet address
X-Send-Pr-Version: 3.95

>Number:         39900
>Category:       kern
>Synopsis:       can't assign 0.0.0.0 inet address
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Nov 12 06:50:00 +0000 2008
>Closed-Date:    Thu Nov 13 22:33:29 +0000 2008
>Last-Modified:  Thu Nov 13 22:35:01 +0000 2008
>Originator:     Martin Husemann
>Release:        NetBSD 5.99.01
>Organization:
The NetBSD Foundation, Inc
>Environment:
System: NetBSD night-owl.duskware.de 5.99.01 NetBSD 5.99.01 (NIGHT-OWL) #40: Wed Nov 12 06:41:37 CET 2008 martin@night-owl.duskware.de:/usr/src/sys/arch/i386/compile/NIGHT-OWL i386
Architecture: i386
Machine: i386
(userland slightly older)

>Description:
The standard address assignement for dynamic IP configurations with pppoe
or ippp does not work any more:

ifconfig pppoe0 0.0.0.0 0.0.0.1

silently(!) fails to set inet addresses (adding "inet" on the command line does
not help).

>How-To-Repeat:
s/a
>Fix:
we could add a special commnd/ioctl to switch the interfaces to dynamic IP
mode, but this used to be the documented way to set things up for years.

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Thu, 13 Nov 2008 22:33:29 +0000
State-Changed-Why:
fixed


From: Martin Husemann <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39900 CVS commit: src/sys/net
Date: Thu, 13 Nov 2008 22:22:24 +0000 (UTC)

 Module Name:	src
 Committed By:	martin
 Date:		Thu Nov 13 22:22:24 UTC 2008

 Modified Files:
 	src/sys/net: if_spppsubr.c

 Log Message:
 Pass SIOCAIFADDR to ifioctl_common, fixes PR kern/39900.


 To generate a diff of this commit:
 cvs rdiff -r1.115 -r1.116 src/sys/net/if_spppsubr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.