Pass SIOCAIFADDR to ifioctl_common, fixes PR kern/39900.